# deeplearning-from-scratch

./: .gitignore  ch2_perceptron.ipynb  ch3_neural_network.ipynb  ch4_neural_network_learning.ipynb  ch5_back_propagation.ipynb  ch7_cnn.ipynb  pyproject.toml
common/: gradient.py
dataset/: mnist.py
deeplearning-from-scratch-1/: ch3_neural_network.ipynb  ch6_learning_skills.ipynb  ch7_cnn.ipynb
deeplearning-from-scratch-1/common/: functions.py
deeplearning-from-scratch-1/dataset/: mnist.py
deeplearning-from-scratch-2/: ch1.ipynb  ch1_neural_network_review.ipynb  ch2.ipynb  ch3.ipynb  ch4.ipynb  ch5.ipynb  ch6.ipynb  ch7.ipynb  ch8.ipynb
