[tool.poetry]
name = "deeplearning-from-scratch"
version = "0.1.0"
description = ""
authors = ["bom1215 <bom1215@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
kagglehub = "^0.3.4"
dezero = "^0.0.13"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
